--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ axtask = { git = "https://github.com/Starry-OS/axtask.git" }
 axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
 axsync = {git = "https://github.com/Starry-OS/axsync.git"}
 axprocess = { git = "https://github.com/Starry-OS/axprocess.git" }
+hashbrown = "0.11"
+jhash = "0.1.1"
+lazy_static = "1.5.0"
